[package]
name = "offregisters-lib"
version = "0.1.0"
authors = ["Samuel Marks <samuel@offscale.io>", "Swoorup Joshi <swoorupj@gmail.com"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_yaml = "0.8"
serde_derive = "1.0.79" 
tokio = { version = "0.1.0", features = ["async-await-preview"] }
tokio-process = "0.2.3"
futures = "0.1.23"
nix = "0.11.0"